@@ -1,13 +1,14 @@
 package de.flavormate.ac_scripts;
 
 import de.flavormate.aa_interfaces.scripts.AScript;
+import de.flavormate.ad_configurations.flavormate.MiscConfig;
 import de.flavormate.ba_entities.highlight.model.Highlight;
 import de.flavormate.ba_entities.highlight.repository.HighlightRepository;
 import de.flavormate.ba_entities.recipe.enums.RecipeDiet;
 import de.flavormate.ba_entities.recipe.model.Recipe;
 import de.flavormate.ba_entities.recipe.repository.RecipeRepository;
-import org.springframework.beans.factory.annotation.Autowired;
-import org.springframework.core.env.Environment;
+import lombok.RequiredArgsConstructor;
+import lombok.extern.slf4j.Slf4j;
 import org.springframework.data.domain.PageRequest;
 import org.springframework.data.domain.Sort;
 import org.springframework.stereotype.Service;
@@ -16,24 +17,21 @@ import java.time.LocalDate;
 import java.time.temporal.ChronoUnit;
 import java.util.List;
 
+@RequiredArgsConstructor
+@Slf4j
 @Service
-public class S21_HighlightGeneratorScript extends AScript {
-	@Autowired
-	Environment env;
+public class S21_HighlightGeneratorScript implements AScript {
 
-	@Autowired
-	private RecipeRepository recipeRepository;
+	private final MiscConfig miscConfig;
 
-	@Autowired
-	private HighlightRepository repository;
+	private final RecipeRepository recipeRepository;
 
-	public S21_HighlightGeneratorScript() {
-		super("Highlight Generator");
-	}
+	private final HighlightRepository repository;
+
 
 	@Override
 	public void run() {
-		log("Starting highlight generation");
+		log.info("Starting highlight generation");
 		for (var diet : RecipeDiet.values()) {
 			generateHighlightsByDiet(diet);
 		}
@@ -41,13 +39,13 @@ public class S21_HighlightGeneratorScript extends AScript {
 
 	private void generateHighlightsByDiet(RecipeDiet diet) {
 		final var now = LocalDate.now();
-		long PAST_DAYS = 14;
+		long PAST_DAYS = miscConfig.highlightDays();
 		var CHECK_PAST_DAYS = PAST_DAYS;
 
 		var existingRecipes = recipeRepository.countByDietIn(RecipeDiet.getFilter(diet));
 
 		if (existingRecipes == 0) {
-			log("No recipes for {} available. Skipping!", diet.toString());
+			log.info("No recipes for {} available. Skipping!", diet);
 			return;
 		}
 		if (existingRecipes <= PAST_DAYS) {
@@ -62,33 +60,33 @@ public class S21_HighlightGeneratorScript extends AScript {
 
 		// init database if empty
 		if (existingHighlights == 0) {
-			log("Generate all highlights...");
-			insertHighlights(PAST_DAYS - 1, 0, highlights.size() - CHECK_PAST_DAYS, now, highlights,
+			log.info("Generate all highlights...");
+			insertHighlights(PAST_DAYS - 1, highlights.size() - CHECK_PAST_DAYS, now, highlights,
 					diet);
 		}
 
 		// check if recipe of the day is up to date
 		var latestHighlight = repository.findAllByDiet(diet,
-				PageRequest.of(0, 1, Sort.by(Sort.Direction.DESC, "date"))).getContent().get(0);
+				PageRequest.of(0, 1, Sort.by(Sort.Direction.DESC, "date"))).getContent().getFirst();
 
 		// get number of recipes to be created, range between 0 and PAST_DAYS
 		var difference = Math.clamp(ChronoUnit.DAYS.between(latestHighlight.getDate(), now), 0, PAST_DAYS);
 
 		// insert missing recipes
 		if (difference > 0) {
-			log("Generate {} missing highlights", difference);
-			insertHighlights(difference - 1, 0, highlights.size() - CHECK_PAST_DAYS, now,
+			log.info("Generate {} missing highlights", difference);
+			insertHighlights(difference - 1, highlights.size() - CHECK_PAST_DAYS, now,
 					highlights, diet);
 
-			log("Generated highlights for {}.", diet.toString());
+			log.info("Generated highlights for {}.", diet);
 		} else {
-			log("No new highlights for {} needed. Skipping!", diet.toString());
+			log.info("No new highlights for {} needed. Skipping!", diet);
 		}
 	}
 
-	private Boolean insertHighlights(long start, long end, long border, LocalDate now,
-	                                 List<Highlight> highlights, RecipeDiet diet) {
-		for (var i = start; i >= end; i--) {
+	private void insertHighlights(long start, long border, LocalDate now,
+	                              List<Highlight> highlights, RecipeDiet diet) {
+		for (var i = start; i >= 0; i--) {
 			var date = now.minusDays(i);
 			boolean insert;
 			Recipe recipe;
@@ -109,13 +107,12 @@ public class S21_HighlightGeneratorScript extends AScript {
 				if (insert) {
 					var highlight = Highlight.builder().diet(diet).recipe(recipe).date(date).build();
 					repository.save(highlight);
-					log("Inserted {} for {} ({})", recipe.getLabel(), date.toString(),
+					log.info("Inserted {} for {} ({})", recipe.getLabel(), date,
 							diet.toString());
 				}
 
 			} while (!insert);
 		}
-		return true;
 	}
 
 }
